# agentic_assistant

./: .gitignore  README.md  e2b_server.py  pyproject.toml  pyrightconfig.json  requirements.txt  streamlit_app.py
personal_ops/: agent_builder.py  agent_profiles.py  async_runtime.py  tools_registry.py
personal_ops/inbox_triage/: __init__.py  draft_eval.py  report.py  scenarios.py  schema.py
src/agent/: __init__.py  agent_event.py  agent_factory.py  i_agent.py  message_factory.py
src/config_service/: __init__.py  config_service.py
src/llm/: __init__.py  anthropic_client.py  gemini_client.py  i_llm_client.py  langfuse_llm_client.py  openai_compatible_client.py  tool_schema_builder.py
src/mcp_client/: mcp_manager.py  mcp_tool.py
src/memory/: __init__.py  long_term_memory.py  short_term_memory.py
src/message_logger/: __init__.py  agent_event_subscriber.py  message_logger_service.py  session_logger.py
streamlit_ui/: agent_session.py  app.py  async_runtime.py  chat_input.py  chat_view.py  client_factory.py  constants.py  event_log.py  mcp_config.json  profile_defaults.py  settings.py  sidebar.py
tools/: __init__.py  create_calendar_event_tool.py  create_draft_email_tool.py  current_date.py  download_attachments_tool.py  edit_calendar_event_tool.py  edit_file_tool.py  fs_utils.py  google_calendar_tool.py  list_directory_tool.py  read_email_tool.py  read_file_tool.py  recall_memory_tool.py  save_memory_tool.py  send_email_tool.py  tavily_extract_tool.py  tavily_search_tool.py  wiki_page_tool.py  wiki_search_tool.py  write_file_tool.py
(+8 files in other folders)
